fixing the deprecated API